Newest version of site with 2016 awards in progress of building

--- a/css/_awards.scss
+++ b/css/_awards.scss
@@ -140,25 +140,35 @@ SPONSORS
 .judges {
     margin-bottom: 2*$space;
     padding-top: 2*$space;
+    @media only screen and (min-width: $lap) {
+        width: 50%; 
+    }
 }
 
 .judge-list {
     @include cf;
+    display: flex;
+    justify-content: space-between; 
     margin-bottom: 0;
     list-style: none;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
 .judge {
     @include cf;
     margin-bottom: 2*$space;
+    width: 50%;
+    display: flex; 
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 .judge__photo {
-    float: left;
-    //border: 1px solid #eee;
-    width: 20%;
-    max-width: 60px;
-    margin-right: $space;
-    border-radius: 125px;
+    border-radius: 50%;
+    max-width: 200px;
+    width: 80%;
+    margin: 0 10%;   
 }
 .judge__name {
     font-size: 18px;
@@ -166,18 +176,12 @@ SPONSORS
 .judge__role {
     display: block;
     font-size: 14px;
+    text-align: center;
 }
 
 @media only screen and (min-width: $lap) {
     .judge {
-        float: left;
-        margin-left: 2%;
-        width: 48%;
-
-        &:nth-child(odd) {
-            clear: left;
-            margin-left: 0;
-        }
+        width: 50%;
     }
 }
 
