Added AI file for adding future content, also added Ti.To link for easy ticket purchase

--- a/css/_jon.scss
+++ b/css/_jon.scss
@@ -1,6 +1,57 @@
-.tito-button{
-	button{
-    background: none;
-    color: #FFF;  
+.tito-wrap {
+    position: absolute;
+    right: 24px;
+    top: 24px;
+    @media only screen and (max-width: $lap) {
+        position: relative;
+        right: 0;
+        top: 10px;
+    }
+}
+
+.tito-button {
+    background: none !important;
+    color: #FFF !important;
+    display: inline-block !important;
+    padding: 12px 24px !important;
+    background: #1acd55 !important;
+    color: white !important;
+    font-weight: bold !important;
+    font-size: 18px !important;
+    text-decoration: none !important;
+    text-align: center !important;
+    letter-spacing: 0.05em !important;
+    border-radius: 3px !important;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3) !important;
+    outline: none;
+    box-shadow: none;
+    transition: background-color .3s ease !important;
+    &:hover,
+    &:focus {
+        background: darken($green, 5%);
+        text-decoration: none;
+    }
+    button {
+        background: none !important;
+        color: #FFF !important;
+        display: inline-block !important;
+        padding: 12px 24px !important;
+        background: #1acd55 !important;
+        color: white !important;
+        font-weight: bold !important;
+        font-size: 18px !important;
+        text-decoration: none !important;
+        text-align: center !important;
+        letter-spacing: 0.05em !important;
+        border-radius: 3px !important;
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3) !important;
+	    outline: none;
+	    box-shadow: none;
+        transition: background-color .3s ease !important;
+        &:hover,
+        &:focus {
+            background: darken($green, 5%);
+            text-decoration: none;
+        }
     }
 }
