--- a/css/nt.css
+++ b/css/nt.css
@@ -1,4 +1,3 @@
-/*!* Nott Tuesday by Joseph Russell and Chris Bailey at JH */
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Change the default font family in all browsers (opinionated).
@@ -418,6 +417,14 @@ RESET
   padding: 0;
   box-sizing: border-box; }
 
+::selection {
+  background: #d9f7e3;
+  /* WebKit/Blink Browsers */ }
+
+::-moz-selection {
+  background: #d9f7e3;
+  /* Gecko Browsers */ }
+
 /* ========================================
 ROOT
 ======================================== */
@@ -507,6 +514,10 @@ p small {
   .button:hover, .button:focus {
     background: #17b64c;
     text-decoration: none; }
+  .button.startup-award {
+    width: 100%; }
+  .button.cta-button {
+    padding: 18px 24px; }
 
 img {
   display: block;
@@ -534,6 +545,9 @@ hr {
 
 .nav--inline > li > a {
   display: inline-block; }
+
+.align-margin {
+  margin-top: auto; }
 
 /* ========================================
 HEADER
@@ -756,24 +770,31 @@ CATEGORIES FRONT PAGE
 .category-list-front {
   list-style: none;
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  align-items: stretch; }
 
 .category-front {
   width: 50%;
-  padding: 20px; }
+  padding: 20px;
+  position: relative;
+  display: flex;
+  flex-direction: column; }
+  .category-front p {
+    margin-bottom: 30px; }
 
 .category-img-front {
-  width: 100%;
-  padding: 30px 20%;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
-  transition: ease-in-out 0.2s; }
+  transition: ease-in-out 0.2s;
+  margin: 0 auto 30px auto; }
   .category-img-front:hover {
     transform: scale(1.05); }
 
 @media only screen and (max-width: 600px) {
   .category-front {
     width: 100%;
-    padding: 10px 20px; } }
+    padding: 30px 20px; } }
 /* ========================================
 SPONSORS
 ======================================== */
@@ -785,12 +806,19 @@ SPONSORS
     .sponsor-list {
       justify-content: center; } }
   .sponsor-list .sponsor {
-    width: calc(100% / 3);
     padding: 0 20px 30px 20px;
     list-style: none;
     display: flex;
     align-items: center;
     flex-direction: column; }
+    .sponsor-list .sponsor.third {
+      width: calc(100% / 3); }
+    .sponsor-list .sponsor.half {
+      width: 50%; }
+      .sponsor-list .sponsor.half .sponsor__logo {
+        max-width: none; }
+      .sponsor-list .sponsor.half p {
+        max-width: none; }
     .sponsor-list .sponsor p {
       max-width: 260px;
       text-align: center; }
