Refactored CSS for sponsors, phasing out old version, now using sponsor-logo__front, will eventually move to sponsor-logo as a blanket term, added all sponsors to the sponsor sub-folder to make future work uniform

--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -6,6 +6,7 @@ $purple: #181d24;
 $green: #1acd55;
 // $green: #0BDA51;
 $blue: #0074b4;
+$light-blue: #99b3ca;
 $light-grey: #e3e3e3;
 
 $mirage: #161928;
